--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
   },
   "homepage": "https://github.com/CCCYANG/forum-demo#readme",
   "dependencies": {
+    "antd-mobile": "^2.0.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "css-loader": "^0.28.7",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
