--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "react": "^16.1.1",
