--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd-mobile": "^2.0.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "less": "^2.7.3",
